--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,10 +9,10 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Rights Reserved.
                     <br>
-                    Powered by <a href="http://huangxuan.me">Hux Blog</a> |
+                    Supported by <a href="https://t.me/HiaiFeng">ifeng</a> |
                     <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
                         height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true">
+                        src="https://ghbtns.com/github-btn.html?user=hiifeng&repo=V2ray-for-Doprax&type=star&count=true">
                     </iframe>
                 </p>
             </div>
