--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Rights Reserved.
                     <br>
-                    Supported by <a href="https://t.me/HiaiFeng">ifeng</a> <!--|
+                    Supported by <a href="https://www.hicairo.com">ifeng</a> <!--|
                     <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
                         height="20px"
                         src="https://ghbtns.com/github-btn.html?user=hiifeng&repo=V2ray-for-Doprax&type=star&count=true">
