--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -83,7 +83,7 @@
     <a target="_blank" href="https://t.me/{{ site.telegram_username }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa  fa-stack-1x fa-inverse">Tg</i>
+        <i class="fa fa-telegram fa-stack-1x fa-inverse"></i>
       </span>
     </a>
   </li>
