--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -88,4 +88,14 @@
     </a>
   </li>
   {% endif %}
+  {% if site.qq_username %}
+  <li>
+    <a target="_blank" href="tencent://message/?uin={{ site.qq_username }}&Site=&Menu=no">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-qq fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  {% endif %}
 </ul>
