--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -98,4 +98,14 @@
     </a>
   </li>
   {% endif %}
+  {% if site.wechat_username %}
+  <li>
+    <a target="_blank" href="weixin://dl/chat?{{ site.qq_username }}">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-wechat fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  {% endif %}
 </ul>
