--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -100,7 +100,7 @@
   {% endif %}
   {% if site.wechat_username %}
   <li>
-    <a target="_blank" href="weixin://dl/chat?{{ site.qq_username }}">
+    <a target="_blank" href="weixin://dl/chat?{{ site.wechat_username }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-wechat fa-stack-1x fa-inverse"></i>
