--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -78,6 +78,7 @@
     </a>
   </li>
   {% endif %}
+  <!-- Modified by iFeng to add Telegram, QQ, and WeChat. 202403061305 -->
   {% if site.telegram_username %}
   <li>
     <a target="_blank" href="https://t.me/{{ site.telegram_username }}">
@@ -108,4 +109,5 @@
     </a>
   </li>
   {% endif %}
+  <!-- Modified by iFeng to add Telegram, QQ, and WeChat. 202403061305 -->
 </ul>
