--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,21 @@
 
 {% include head.html %}
 
+<!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
+<link href="/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+<script src="/js/jquery.min.js"></script> 
+<script src="/js/bootstrap.min.js"></script>
+<style type="text/css">
+.back-to-top {
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display:none;
+}
+</style>
+<!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
+
 <!-- hack iOS CSS :active style -->
 <body ontouchstart="">
 
@@ -17,6 +32,34 @@
 <!-- Image to hack wechat -->
 <!--<img src="/img/icon_wechat.png" width="0" height="0" />-->
 <!-- Migrate from head to bottom, no longer block render and still work -->
+
+<!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
+<a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="返回顶部" data-toggle="tooltip" data-placement="left">
+<span class="glyphicon glyphicon-chevron-up"></span>
+</a>
+<script>
+$(document).ready(function(){
+     $(window).scroll(function () {
+            if ($(this).scrollTop() > 50) {
+                $('#back-to-top').fadeIn();
+            } else {
+                $('#back-to-top').fadeOut();
+            }
+        });
+        // scroll body to 0px on click
+        $('#back-to-top').click(function () {
+            $('#back-to-top').tooltip('hide');
+            $('body,html').animate({
+                scrollTop: 0
+            }, 800);
+            return false;
+        });
+        
+        $('#back-to-top').tooltip('show');
+
+});	
+</script>
+<!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
 
 </body>
 
