--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,20 @@
 
 {% include head.html %}
 
+<!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
+<script src="/js/jquery.min.js"></script> 
+<script src="/js/bootstrap.min.js"></script>
+<style type="text/css">
+.back-to-top {
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display:none;
+}
+</style>
+<!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
+
 <!-- hack iOS CSS :active style -->
 <body ontouchstart="">
 
