--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,11 +33,9 @@
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
 <!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
-<div id="back-to-top">
-    <a href="#section" data-toggle="tooltip" data-placement="top" title="top">
-    <i class="fa fa-chevron-up" aria-hidden="true"></i>
-    </a>
-</div>
+<a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="返回顶部" data-toggle="tooltip" data-placement="left">
+<span class="glyphicon glyphicon-chevron-up"></span>
+</a>
 <script>
 $(document).ready(function(){
      $(window).scroll(function () {
