--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,11 @@
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
 <!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
-<a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="返回顶部" data-toggle="tooltip" data-placement="left">
+<!--<a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="返回顶部" data-toggle="tooltip" data-placement="left">
 <span class="glyphicon glyphicon-chevron-up"></span>
+</a>-->
+<a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="返回顶部" data-toggle="tooltip" data-placement="left">
+    <img src="https://github.com/Hiifeng.png" width="30" height="30">
 </a>
 <script>
 $(document).ready(function(){
