--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 <!--<a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="返回顶部" data-toggle="tooltip" data-placement="left">
 <span class="glyphicon glyphicon-chevron-up"></span>
 </a>-->
-<img id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="返回顶部" data-toggle="tooltip" data-placement="left" src="https://demo.hidoha.net/img/top.png" width="50" height="50">
+<img id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="返回顶部" data-toggle="tooltip" data-placement="left" src="/img/top.png" width="50" height="50">
 <script>
 $(document).ready(function(){
      $(window).scroll(function () {
