--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,10 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    display:none;
+    display: none;
+    width: 50px; /* 宽度 */
+    height: 50px; /* 高度 */
+    border-radius: 50%; /* 圆角，可以根据需要调整 */
 }
 </style>
 <!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
