--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
     bottom: 20px;
     right: 20px;
     display: none;
+    width: 50px; /* 宽度 */
+    height: 30px; /* 高度 */
     border-radius: 10%; /* 圆角，可以根据需要调整 */
 }
 </style>
