--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
 <!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
-<a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="返回顶部" data-toggle="tooltip" data-placement="left">
+<a id="back-to-top" href="#" role="button" title="返回顶部" data-toggle="tooltip" data-placement="left">
 ddd
 </a>
 <script>
