--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
 <!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
-<a id="back-to-top" href="#" role="button" title="返回顶部" data-toggle="tooltip" data-placement="left">
-ddd
+<a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" title="返回顶部" data-toggle="tooltip" data-placement="left">
+<i class="fa fa-chevron-up" aria-hidden="true"></i>
 </a>
 <script>
 $(document).ready(function(){
