--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
 <style type="text/css">
 #back-to-top {
   position: fixed;
-  bottom: 110px;
-  right: 4%
+  bottom: 20px;
+  right: 20px
 }
 
 #back-to-top a {
