--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,12 +107,9 @@
 <!--<img src="/img/icon_wechat.png" width="0" height="0" />-->
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
-<!-- Modified by iFeng to add the Return to Top function. 202403061305 
-<a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" title="返回顶部" data-toggle="tooltip" data-placement="left">
-<i class="fa fa-chevron-up" aria-hidden="true"></i>
-</a>-->
+<!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
 <div id="back-to-top">
-    <a href="#section" data-toggle="tooltip" data-placement="top" title="top">
+    <a href="#" data-toggle="tooltip" data-placement="top" title="top">
     <i class="fa fa-chevron-up" aria-hidden="true"></i>
     </a>
 </div>
@@ -133,13 +130,10 @@ $(document).ready(function(){
             }, 800);
             return false;
         });
-        
         $('#back-to-top').tooltip('show');
-
 });	
 </script>
 <!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
 
 </body>
-
 </html>
