--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 <!--<img src="/img/icon_wechat.png" width="0" height="0" />-->
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
-<!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
+<!-- Modified by iFeng to add the Return to Top function. 202403061305 start -->
 <div id="back-to-top">
     <a href="#" data-toggle="tooltip" data-placement="top" title="top">
     <i class="fa fa-chevron-up" aria-hidden="true"></i>
@@ -44,7 +44,7 @@ $(document).ready(function(){
         $('#back-to-top').tooltip('show');
 });	
 </script>
-<!-- Modified by iFeng to add the Return to Top function. 202403061305 -->
+<!-- Modified by iFeng to add the Return to Top function. 202403061305 end-->
 
 </body>
 </html>
