--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -234,6 +234,6 @@ layout: default
   });
 </script>
 <script type="text/javascript"
-        src="https://cdn.bootcdn.net/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 {% endif %}
