--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -99,7 +99,7 @@
     </a>
   </li>
   {% endif %}
-  {% if site.wechat_username %}
+  {% if site.wechat %}
   <li>
     <a target="_blank" href="/img/icon_wechat.png">
       <span class="fa-stack fa-lg">
