--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Rights Reserved.
                     <br>
-                    Supported by <a href="https://www.hicairo.com">ifeng</a> | <i class="fa fa-sitemap" aria-hidden="true"></i>
+                    Supported by <a href="https://www.hicairo.com" target="_blank">ifeng</a> | <a href="/sitemap.xml" target="_blank"><i class="fa fa-sitemap" aria-hidden="true"></i></a>
                     <!--
                     <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
                         height="20px"
