--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,12 +8,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Rights Reserved.
                     <br>
-                    Supported by <a href="https://www.hicairo.com" target="_blank">ifeng</a> | <a href="/sitemap.xml" target="_blank"><i class="fa fa-sitemap" aria-hidden="true">SiteMap</i></a>
-                    <!--
-                    <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
-                        height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=hiifeng&repo=V2ray-for-Doprax&type=star&count=true">
-                    </iframe>-->
+                    Supported by <a href="https://www.hicairo.com" target="_blank">ifeng</a> | <a href="/sitemap.xml" target="_blank"><i class="fa fa-sitemap" aria-hidden="true"></i></a>
                 </p>
             </div>
         </div>
